@@ -17,6 +17,7 @@ All (GUI):
 - support for virtual list control added
 - wxFindReplaceDialog added (based on work of Markus Greither)
 - wxTextCtrl::SetMaxLength() added (wxMSW/wxGTK)
+- polygon support in wxRegion (Klaas Holwerda)
 
 wxHTML:
 
